syntax = "proto3";

package hello;

option go_package="/proto";

service Hello {
  rpc SayHello (SayRequest) returns (SayResponse);
}

message SayResponse {
  string Message = 1;
}

message SayRequest {
  string Name = 1;
}

